--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,61 +1,56 @@
-<!-- Header -->
-<header id="header">
-  <h1><a href="{{ site.url }}">{{ site.title }}</a></h1>
-	<nav class="links">
-    <!--
-    <ul>
-      <li><a href="#">Lorem</a></li>
-			<li><a href="#">Ipsum</a></li>
-			<li><a href="#">Feugiat</a></li>
-			<li><a href="#">Tempus</a></li>
-			<li><a href="#">Adipiscing</a></li>
-		</ul>
-  -->
-	</nav>
-	<nav class="main">
-    <ul>
-                <!--
-								<li class="search">
-									<a class="fa-search" href="#search">Search</a>
-									<form id="search" method="get" action="#">
-										<input type="text" name="query" placeholder="Search" />
-									</form>
-								</li>
-              -->
-		  <li class="menu">
-		  	<a class="fa-bars" href="#menu">Menu</a>
-			</li>
-		</ul>
-	</nav>
-</header>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Menu -->
-<section id="menu">
-  <!-- Search -->
-  <!--
-  <section>
-	  <form class="search" method="get" action="#">
-	    <input type="text" name="query" placeholder="Search" />
-		</form>
-	</section>
-  -->
-	<!-- Links -->
-	<section>
-	  <ul class="links">
-	    <li>
-		    <a href="/acknowledgement">
-				  <h3>Acknowledgement</h3>
-				  <p>Acknowledgement</p>
-				</a>
-			</li>
-    </ul>
-	</section>
-	<!-- Actions -->
-  <!--
-  <section>
-	  <ul class="actions vertical">
-	    <li><a href="#" class="button big fit">Log In</a></li>
-    </ul>
-  </section>
-  -->
-</section>
+    <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+    <link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico?" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_8v3czwksspqlg14i.css">
+    <link rel="stylesheet" href="{{ "/css/main.css " | prepend: site.baseurl }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml " | prepend: site.baseurl | prepend: site.url }}">
+
+{% if site.baidu_tongji_id %}
+    <script>
+    // 百度统计代码
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?{{site.baidu_tongji_id}}";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+{% endif %}
+{% if site.google_analytics_id %}
+    <script>
+    // google analytics
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{site.google_analytics_id}}', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+{% endif %}
+
+{% if page.mathjax %}
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+    tex2jax: { inlineMath: [["$","$"],["\\(","\\)"]] },
+    "HTML-CSS": {
+      linebreaks: { automatic: true, width: "container" }
+    }
+});
+</script>
+<script type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+{% endif %}
+</head>
